# agent-router

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  scope
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-foundation-contracts/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-REVIEW.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-state-capture-engine/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-REVIEW.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-dynamic-scoring-engine/: 03-CONTEXT.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
agent_router/: __init__.py  capture.py  config.py  scoring.py  state.py  tracker.py
agent_router/routing/: __init__.py  dynamic_lm.py
bench/: synthetic_loop_bench.py
dev/: artifex-review.md  demo_loop_break.py  research-dspy-routellm.md
tests/: conftest.py
tests/integration/: test_mock_routellm_server.py  test_pipeline.py
tests/unit/: test_capture.py  test_config.py  test_contracts.py  test_detectors.py  test_imports.py  test_routing.py  test_scoring.py
