# Source: https://github.com/pypa/hatch/blob/master/docs/config/metadata.md
[build-system]
requires = ["hatchling>=1.30"]
build-backend = "hatchling.build"

[project]
name = "agent-router"
description = "Trajectory-aware DSPy agent router with RouteLLM escalation"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "dspy>=3.2.1",
    "pydantic>=2.12",
    "pydantic-settings>=2.14",
    "openai>=2.0",
    "numpy>=2.0",
]

[project.optional-dependencies]
embed = ["fastembed>=0.8.0"]
serve = ["routellm[serve]==0.2.0"]         # torch + transformers pulled here; run server separately
bench = ["routellm[serve,eval]==0.2.0"]    # adds datasets + pandarallel
dev   = [
    "mypy>=2.1",
    "pytest>=9.1",
    "pytest-asyncio>=1.4",
    "pytest-mock>=3.15",
]

[tool.hatch.version]
path = "agent_router/__init__.py"          # reads __version__ = "0.1.0"

[tool.hatch.build.targets.wheel]
packages = ["agent_router"]                # flat layout: agent_router/ at root

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
python_version = "3.10"
files = ["agent_router/"]

[[tool.mypy.overrides]]
module = ["dspy.*", "litellm.*", "fastembed.*", "onnxruntime.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
